--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
     <a href="https://www.instagram.com/frank_910413/">IG連結</a> 
     </p>
 
-    <a href="#"><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.britannica.
-        com%2F40%2F144440-050-DA828627%2FMorgan-Freeman.jpg&imgrefurl=https%3A%2F%2Fwww.brit
-        annica.com%2Fbiography%2FMorgan-Freeman&tbnid=K39fDXR0VhRXEM&vet=12ahUKEwjG4YDY4d_zA
-        hU00IsBHarfBNQQMygBegUIARCYAQ..i&docid=S0Mjs2oD0WLSkM&w=1600&h=1600&q=morgan%20freem
-        an&ved=2ahUKEwjG4YDY4d_zAhU00IsBHarfBNQQMygBegUIARCYAQ" alt="摩根費利曼"></a>
-    
+    <a href="#"><img src="https://cdn.britannica.com/40/144440-050-DA828627/Morgan-Freeman.jpg" alt="摩根費利曼"></a>
+  
 </body>
 
 </html>
