--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<style>
+    .green-text {
+      color: green;
+    }
+  
+    h1 {
+      font-family: Lobster;
+    }
+  
+    p {
+      font-size: 16px;
+      font-family: monospace;
+    }
+  </style>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,9 +23,9 @@
     <title>test</title> 
 </head>
 <body>
-    <h1>我的第一個網站</h1>
-    <h2>名字:李俊威</h2>
-    <p>系級:資工二乙</p>
+    <h1 style="color: blue;">我的第一個網站</h1>
+    <h2 style="color: orange;">名字:李俊威</h2>
+    <p class="green-text">系級:資工二乙</p>
     <p>興趣</p>
     <ul>
         <li>魔術方塊</li>
