--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <title>test</title> 
 </head>
 <body>
-    <h1 style="color: blue;">我的第一個網站</h1>
-    <h2 style="color: orange;">名字:李俊威</h2>
+    <h1 style="color: blue;">Frank web</h1>
+    <h2 style="color: orange;">名字:李俊威(Chun-Wei Li)</h2>
     <p class="green-text">系級:資工二乙</p>
     <p>興趣</p>
     <ul>
