--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     FB連結</a> 
     <a href="https://www.instagram.com/frank_910413/">IG連結</a> 
     </p>
-
-    <a href="#"><img src="https://cdn.britannica.com/40/144440-050-DA828627/Morgan-Freeman.jpg" alt="摩根費利曼"></a>
+    <p>最喜歡的演員</p>
+    <a href="#"><img src="https://cdn.britannica.com/40/144440-050-DA828627/Morgan-Freeman.jpg" width="25%" alt="摩根費利曼"></a>
   
 </body>
 
