--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     .white-text {
       color: white;
     }
-  
+    .white2-text {
+      color: white;
+      font-size: 20px;
+    }
     h1 {
       font-family: Lobster;
     }
@@ -66,7 +69,7 @@
 <body>
     <h1 class="white-text">Frank web</h1>
     <h2 class="white-text">名字:李俊威(Chun-Wei Li)</h2>
-    <p class="green-text">系級:資工二乙</p>
+    <p class="white-text">系級:資工二乙</p>
     <div>
     <p class="white-text">興趣</p>
     <ul>
@@ -79,6 +82,7 @@
     
     <p class="white-text">我的社群網站<a href="https://www.facebook.com/profile.php?id=100005144203887" class="white-text">
     FB連結</a> 
+    <p class="white2-text">右邊是我用Responsive card介紹我最喜歡的演員</p>
     <a href="https://www.instagram.com/frank_910413/" class="white-text">IG連結</a> 
     </p>
     <section class="container">
@@ -87,7 +91,7 @@
                 <h2>摩根·費里曼</h2>
                 <p>摩根·費里曼是一位美國男演員、導演，曾分別獲得一次奧斯卡金像獎與金球獎。
                     摩根·費里曼於90年代初成名，並演出過許多著名的好萊塢電影。</p>
-            <a href="">READ MORE</a>
+            <a href="https://en.wikipedia.org/wiki/Morgan_Freeman">READ MORE</a>
         </div>
     </section>
 </body>
